feat: added auth/profile route
